gcc/testsuite/g++.old-deja/g++.other/crash4.C
// { dg-do assemble  }

struct T {
  struct S __attribute__ ((packed)) { // { dg-error "" } parse error
    int i;                            
  };
};
